--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -37,5 +37,5 @@ jobs:
     - name: Test with pytest
       run: |
         pip install pytest
-        sys.path.append('\code')
+        sys.path.append(\code)
         pytest
