--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -37,5 +37,5 @@ jobs:
     - name: Test with pytest
       run: |
         pip install pytest
-        set PYTHONPATH = %PYTHONPATH%
+        set PYTHONPATH = code
         pytest
